@@ -104,6 +104,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #13579: string.Formatter now understands the 'a' conversion specifier.
+
 - Issue #15595: Fix subprocess.Popen(universal_newlines=True)
   for certain locales (utf-16 and utf-32 family). Patch by Chris Jerdonek.
 
